<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="349dp">

    <Button
        android:id="@+id/center"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/center"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_center"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toEndOf="@+id/left"
        app:layout_constraintTop_toBottomOf="@+id/top_center" />

    <Button
        android:id="@+id/left"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="28dp"
        android:text="@string/left"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/center"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/right"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="28dp"
        android:text="@string/right"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/center"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/top_left"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="28dp"
        android:text="@string/top_left"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/top_center"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/top_center"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/top_center"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/top_right"
        app:layout_constraintStart_toEndOf="@+id/top_left"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/top_right"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="28dp"
        android:text="@string/top_right"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/top_center"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:text="@string/player1_win_str"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="36dp"
        android:text="@string/player2_win_str"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/player1_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/player1_win_count"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/player2_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2_win_count"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/player1_count"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="10dp"
        android:layout_marginTop="256dp"
        android:background="#242424"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_turn_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/player_turn_x_str"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/bottom_left"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="28dp"
        android:text="@string/bottom_left"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_center"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bottom_center"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="28dp"
        android:text="@string/bottom_center"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toStartOf="@+id/bottom_right"
        app:layout_constraintStart_toEndOf="@+id/bottom_left" />

    <Button
        android:id="@+id/bottom_right"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="28dp"
        android:text="@string/bottom_right"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_center"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="10dp"
        android:background="#242424"
        app:layout_constraintBottom_toTopOf="@+id/center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_center"
        app:layout_constraintVertical_bias="0.495" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="10dp"
        android:background="#242424"
        app:layout_constraintBottom_toTopOf="@+id/bottom_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/center" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="10dp"
        android:background="#242424"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider9"
        android:layout_width="10dp"
        android:layout_height="729dp"
        android:background="#242424"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintStart_toEndOf="@+id/left"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider10"
        android:layout_width="10dp"
        android:layout_height="729dp"
        android:background="#242424"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toEndOf="@+id/center"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/win_view2"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:background="#202020"
        android:elevation="3dp"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/win_view"
        app:layout_constraintEnd_toEndOf="@+id/win_view"
        app:layout_constraintStart_toStartOf="@+id/win_view"
        app:layout_constraintTop_toTopOf="@+id/win_view"
        app:layout_constraintVertical_bias="0.488"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/win_view"
        android:layout_width="245dp"
        android:layout_height="232dp"
        android:background="#00C853"
        android:elevation="3dp"
        android:gravity="center"
        android:visibility="invisible"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="134dp"
        android:layout_height="63dp"
        android:backgroundTint="#A3A3A3"
        android:text="@string/reset_button_str"
        android:visibility="invisible"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="@+id/win_view"
        app:layout_constraintStart_toStartOf="@+id/win_view"
        app:layout_constraintTop_toBottomOf="@+id/win_view2" />

</androidx.constraintlayout.widget.ConstraintLayout>